<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.flocks</groupId>
	<artifactId>rioaa</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>rioaa-util</module>
		<module>rioaa-model</module>
		<module>rioaa-server</module>
	</modules>
	<properties>
		<!-- BOM versions -->
		<spring.bom.version>4.1.4.RELEASE</spring.bom.version>

		<!-- versions -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javax.version>3.1.0</javax.version>
		<javax.validation.version>1.1.0.Final</javax.validation.version>
		<javax.jstl.version>1.2</javax.jstl.version>
		<javax.el.version>3.0.0</javax.el.version>
		<aspectjweaver.version>1.8.4</aspectjweaver.version>
		<spring.plugins.core.version>1.1.0.RELEASE</spring.plugins.core.version>
		<spring.data.jpa.version>1.7.1.RELEASE</spring.data.jpa.version>
		<joda.time.version>2.7</joda.time.version>
		<junit.version>4.12</junit.version>
		<log4j2.version>2.1</log4j2.version>
		<lombok.version>1.14.8</lombok.version>
		<jetty.version>9.3.0.M1</jetty.version>
		<httpclient.version>4.3.6</httpclient.version>
		<hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
		<hibernate.entitymanager.version>4.2.17.Final</hibernate.entitymanager.version>

		<hibernate.validation.version>5.1.3.Final</hibernate.validation.version>
		<commons-cli.version>1.2</commons-cli.version>
		<reflections.version>0.9.9</reflections.version>
		<common-lang3.version>3.3.2</common-lang3.version>
		<mojo.version>1.3.2</mojo.version>
		<commons-io.version>2.4</commons-io.version>
		<javax.resource.version>1.7</javax.resource.version>
		<beanutils.version>1.9.2</beanutils.version>
		<slf4j.version>1.6.4</slf4j.version>
		<joor.version>0.9.5</joor.version>
		<spring.integration.version>4.1.2.RELEASE</spring.integration.version>
	</properties>
	<dependencies>
		<!-- Spring BOM -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-framework-bom</artifactId>
			<version>${spring.bom.version}</version>
			<type>pom</type>
			<scope>import</scope>

		</dependency>

		<!-- Spring Data JPA -->
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>${spring.data.jpa.version}</version>

		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>${aspectjweaver.version}</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.plugin</groupId>
			<artifactId>spring-plugin-core</artifactId>
			<version>${spring.plugins.core.version}</version>

		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${beanutils.version}</version>

		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Joda -->
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda.time.version}</version>

		</dependency>
		<!-- Hibernate / JPA -->
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<!-- <artifactId>hibernate-jpa-2.1-api</artifactId> -->
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>${hibernate.jpa.version}</version>

		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.entitymanager.version}</version>
			<!-- Y -->
		</dependency>
		<!-- HTTP Client -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>

		</dependency>

		<!-- Web -->

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.version}</version>
			<!--scope>provided</scope -->

		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${javax.jstl.version}</version>
			<!--<scope>provided</scope> -->

		</dependency>

		<!-- Jetty Server -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>

		</dependency>
		<!-- Logging -->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>



		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>

		</dependency>



		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j2.version}</version>

		</dependency>



		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jcl</artifactId>
			<version>${log4j2.version}</version>

		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>

		</dependency>
		
		<!-- Junit -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Validation -->
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${javax.validation.version}</version>

			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate.validation.version}</version>

			</dependency>

			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>javax.el-api</artifactId>
				<version>${javax.el.version}</version>

			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${commons-cli.version}</version>

			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${common-lang3.version}</version>

			</dependency>

			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>${reflections.version}</version>

			</dependency>
			
			<dependency>
	            <groupId>org.jooq</groupId>
	            <artifactId>joor</artifactId>
	            <version>${joor.version}</version>
            </dependency>
			
			<dependency>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${mojo.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.resource</groupId>
				<artifactId>javax.resource-api</artifactId>
				<version>${javax.resource.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>${jetty.version}</version>
					<configuration>
						<jvmArgs>-server -Xms512m -Xmx512m -verbose:gc</jvmArgs>
						<stopPort>7087</stopPort>
						<stopKey>foo</stopKey>
						<scanIntervalSeconds>2</scanIntervalSeconds>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.1</version>
				</plugin>
				<plugin>
					<groupId>org.jboss.as.plugins</groupId>
					<artifactId>jboss-as-maven-plugin</artifactId>
					<version>7.4.Final</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>2.8</version>
					<configuration>
						<version>6</version>
						<defaultLibBundleDir>lib</defaultLibBundleDir>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.16</version>
					<configuration>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
					</configuration>
					<executions>
					<execution>
					 <configuration>
					    <reuseForks>true</reuseForks>
						<forkCount>2</forkCount>
						<parallel>classes</parallel>
						<threadCount>10</threadCount>
						<skip>false</skip>
						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
					</configuration>
					</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>
</project>
